Name: HsOpenSSL
Synopsis: (Part of) OpenSSL binding for Haskell
Description:
        HsOpenSSL is a (part of) OpenSSL binding for Haskell. It can
        generate RSA keys, read and write PEM files, generate message
        digests, sign and verify messages, encrypt and decrypt
        messages.
Version: 0.1
License: PublicDomain
Author: PHO <phonohawk TA ps TOD sakura TOD ne TOD jp>
Maintainer: PHO <phonohawk TA ps TOD sakura TOD ne TOD jp>
Stability: experimental
Homepage: http://ccm.sherry.jp/hs-openssl/
Category: Cryptography
Tested-With: GHC == 6.6.1
Build-Depends:
        base, time
Exposed-Modules:
        OpenSSL
        OpenSSL.ASN1
        OpenSSL.BIO
        OpenSSL.BN
        OpenSSL.ERR
        OpenSSL.EVP.Base64
        OpenSSL.EVP.Cipher
        OpenSSL.EVP.Digest
        OpenSSL.EVP.Open
        OpenSSL.EVP.PKey
        OpenSSL.EVP.Seal
        OpenSSL.EVP.Sign
        OpenSSL.EVP.Verify
        OpenSSL.Objects
        OpenSSL.PEM
        OpenSSL.RSA
        OpenSSL.SSL
        OpenSSL.Stack
        OpenSSL.Utils
        OpenSSL.X509
        OpenSSL.X509.Revocation
        OpenSSL.X509.Name
        OpenSSL.X509.Request
Extensions:
        ForeignFunctionInterface
ghc-options:
         -fglasgow-exts
C-Sources:
        cbits/HsOpenSSL.c
Include-Dirs:
        cbits